--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,8 +1,4 @@
-############# Common ############
-server.contextPath=/casy-adapter-poc
-springdoc.api-docs.path=/api-doc
-
 ############# SaltEdge ##############
 saltedge.client.application-id=nzP_VNPONfZ6E3CUxb4MDJu19n31l7uCTigCxJn7hiA
-saltedge.client.host=https://www.saltedge.com/api/
+saltedge.client.host=https://localhost:8088
 saltedge.client.secret=7sCGRAnVjmDNGFjGcXR0cixjNcyxhmI4aXi6g19yzbU
