add callback and job

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ server.contextPath=/casy-adapter-poc
 saltedge.client.application-id=nzP_VNPONfZ6E3CUxb4MDJu19n31l7uCTigCxJn7hiA
 saltedge.client.host=https://www.saltedge.com/api/
 saltedge.client.secret=7sCGRAnVjmDNGFjGcXR0cixjNcyxhmI4aXi6g19yzbU
+
+############ Spring Batch ########
+spring.batch.job.enabled=false
