--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,7 @@
 saltedge.client.application-id=nzP_VNPONfZ6E3CUxb4MDJu19n31l7uCTigCxJn7hiA
 saltedge.client.host=https://localhost:8088
 saltedge.client.secret=7sCGRAnVjmDNGFjGcXR0cixjNcyxhmI4aXi6g19yzbU
+
+############ Spring Batch ########
+spring.batch.job.enabled=false
+
