write acc/trx in file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 ############# Common ############
 server.contextPath=/casy-adapter-poc
-
 ############# SaltEdge ##############
 saltedge.client.application-id=nzP_VNPONfZ6E3CUxb4MDJu19n31l7uCTigCxJn7hiA
 saltedge.client.host=https://www.saltedge.com/api/
 saltedge.client.secret=7sCGRAnVjmDNGFjGcXR0cixjNcyxhmI4aXi6g19yzbU
-
 ############ Spring Batch ########
 spring.batch.job.enabled=false
+common.saltedge-accounts-path=saltedge-accounts.xls
+common.saltedge-trx-path=saltedge-transactions.xls
+common.tink-accounts-path=
+common.tink-trx-path=
