--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ common.saltedge-accounts-path=saltedge-accounts.xls
 common.saltedge-trx-path=saltedge-transactions.xls
 common.tink-accounts-path=
 common.tink-trx-path=
+
+server.port=8090
